# sinepia

./: Cargo.toml  LICENSE  Readme.md  build.rs  groups  project.config
sinepia_lambda/: Cargo.toml
sinepia_lambda/src/: ast.rs  context.rs  lib.rs  normalize.rs  subst.rs  typecheck.rs
src/: main.rs  parser.lalrpop
