[workspace]

members = [
    "sinepia_lambda",
]
[package]
name = "sinepia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
lalrpop-util = {version = "0.19.7", features = ["lexer"]}
rustyline = "9.1.2"
sinepia_lambda = {path = "./sinepia_lambda"}
